# link-shortener

./: .dockerignore  Dockerfile  Dockerfile.context  README.md  fly.toml  log_conf.yaml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: fly.yml  ghpush.yml  tests.yml
app/: database.py  main.py  test_main.py
