[project]
name = "link-shortener"
version = "1.0.0"
description = "A test python/fastapi service that doesn't really do anything."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "fastapi[all]>=0.116.1",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "redis>=6.2.0",
    "sqlalchemy[asyncio]>=2.0.41",
]

[dependency-groups]
dev = [
    "fakeredis>=2.30.1",
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]
